refactor: simplify controller and service logic for Carros and Personagem with Clean Code